<resources>
    <string name="app_name" translatable="false">Mana</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_settings">@string/action_settings</string>
    <string name="title_action_video_list">Episodes</string>
    <string name="title_action_source">S</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings BangumiDetailsData & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <!--Settings for playback-->
    <string name="pref_header_playback">Playback</string>
    <string name="pref_header_language">Language</string>
    <string name="pref_title_ja_first">Ja first display</string>
    <string name="pref_title_autoplay">Auto play</string>
    <string name="pref_description_auto_play">When autoplay is enabled,next video will be automatically played</string>
    <string name="pref_description_ja_first_display">First display JA content</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="pref_key_ja_first_bool" translatable="false">ja_first</string>
    <string name="pref_key_dark_theme" translatable="false">dark_theme</string>
    <string name="pref_key_background_playback" translatable="false">background_playback</string>
    <string name="pref_title_background_playback">Allow background playback</string>
    <string name="pref_description_background_playback">Continue playing video when app goes to background</string>
    <string name="title_account">Account</string>
    <string name="title_history">Favorites</string>
    <string name="title_logout">Sign Out</string>
    <string name="title_bangumi">Bangumi</string>
    <string name="title_feedback">Send feedback</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="error_invalid_host">This host is invalid</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_fragment_login_username">UserName</string>
    <string name="hint_fragment_login_password">PassWord</string>
    <string name="title_fragment_login_button">Login</string>
    <string name="hint_fragment_login_host">Host</string>
    <string name="text_fragment_remember">Rememberd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_anim_catalog_tablayout">Anime</string>
    <string name="title_dram_catalog_tablayout">Drama</string>
    <string name="title_episode_textview">Episode( %1$s / %2$s )</string>
    <string name="episode_template">Episode: %1$s</string>
    <string name="hint_search">Name</string>

    <string name="title_uncollection_status">UNCOLLECTION</string>
    <string name="title_wish_status">WISH</string>
    <string name="title_watched_status">WATCHED</string>
    <string name="title_watching_status">WATCHING</string>
    <string name="title_pause_status">PAUSE</string>
    <string name="title_abanoned_status">ABANONED</string>
    <string name="title_all">All</string>
    <string-array name="favorite_status_values">
        <item>@string/title_uncollection_status</item>
        <item>@string/title_wish_status</item>
        <item>@string/title_watched_status</item>
        <item>@string/title_watching_status</item>
        <item>@string/title_pause_status</item>
        <item>@string/title_abanoned_status</item>
    </string-array>
    <string-array name="favorite_status_values_ontitle">
        <item>@string/title_all</item>
        <item>@string/title_wish_status</item>
        <item>@string/title_watched_status</item>
        <item>@string/title_watching_status</item>
        <item>@string/title_pause_status</item>
        <item>@string/title_abanoned_status</item>
    </string-array>
    <string-array name="theme_choise">
        <item>@string/title_light_theme</item>
        <item>@string/title_dark_theme</item>
    </string-array>
    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_theme">Theme</string>
    <string name="title_light_theme">Light</string>
    <string name="title_dark_theme">Dark</string>
    <string name="title_default_theme">System Default</string>
    <string name="title_monday">Monday</string>
    <string name="title_tuesday">Tuesday</string>
    <string name="title_wednesday">Wednesday</string>
    <string name="title_thursday">Thursday</string>
    <string name="title_friday">Friday</string>
    <string name="title_saturday">Saturday</string>
    <string name="title_sunday">Sunday</string>

    <string-array name="weeks">
        <item>@string/title_sunday</item>
        <item>@string/title_monday</item>
        <item>@string/title_tuesday</item>
        <item>@string/title_wednesday</item>
        <item>@string/title_thursday</item>
        <item>@string/title_friday</item>
        <item>@string/title_saturday</item>
    </string-array>
    <string name="title_start">getstart</string>

    <string name="vol">Vol : %1$s</string>
    <string name="brightness">Brightness : %1$s</string>
    <string name="hint_want_to_say_something_edittext">Say...</string>
    <string name="title_send_fabpref">Send</string>

    <string name="linearlayoutmanager" translatable="false">android.support.v7.widget.LinearLayoutManager</string>
    <string name="gridelayoutlayoutmanager" translatable="false">androidx.recyclerview.widget.GridLayoutManager</string>
    <string name="staggergridelayoutlayoutmanager" translatable="false">android.support.v7.widget.StaggeredGridLayoutManager</string>
    <string name="main_announce_span_count" translatable="false">3</string>
    <string name="main_air_span_count" translatable="false">1</string>
    <string name="title_announce">recommended</string>
    <string name="toast_preference_changed">After the restart to take effect!</string>
    <string name="formatter_day_airdate" translatable="false">%1$s - %2$s</string>
    <string name="title_activity_bangumi_detail_mvvm" translatable="false">BangumiDetailMvvm</string>
    <string name="title_empty_data">No data</string>
    <string name="text_seekto">seek to %1$s</string>
</resources>
