<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:defaultValue="false"
        android:key="isAutoplay"
        android:summary="@string/pref_description_auto_play"
        android:title="@string/pref_title_autoplay" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_ja_first_bool"
        android:summary="@string/pref_description_ja_first_display"
        android:title="@string/pref_title_ja_first" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_background_playback"
        android:summary="@string/pref_description_background_playback"
        android:title="@string/pref_title_background_playback" />
    <ListPreference
        android:dialogTitle="@string/title_theme"
        app:defaultValue="0"
        app:entries="@array/theme_choise"
        app:entryValues="@array/theme_values"
        app:key="@string/pref_key_dark_theme"
        app:singleLineTitle="true"
        app:title="@string/title_theme" />

</PreferenceScreen>